# engram

./: CLAUDE.md  Cargo.toml  ENGRAM_SPEC.md  README.md  build.rs  dist-workspace.toml
.engram/: .gitignore
.engram/nodes/: _index.yaml
.github/workflows/: release.yml
kanban/: activity.jsonl  config.yml
kanban/tasks/: 001-project-setup-add-dependencies-to-cargo-toml-clap.md  002-data-models-node-edge-index-backlinks-structs-with.md  003-cli-skeleton-clap-subcommands-for-all-commands.md  004-init-command-create-engram-structure-gitignore.md  005-node-crud-node-get-create-update-deprecate-yaml.md  006-index-management-update-index-yaml-and-backlinks.md  007-sqlite-fts5-create-tables-sync-on-crud-operations.md  008-search-command-full-text-search-via-fts5-with.md  009-traverse-command-weighted-bfs-with-budget-depth.md  010-backlinks-command-read-and-display-backlinks-yaml.md  011-status-command-dirty-detection-md5-stale-detection.md  012-check-command-validate-graph-integrity-broken.md  013-rebuild-index-command-full-rebuild-of-index-yaml.md  014-interactive-node-create-dialoguer-prompts-for-id.md  015-shell-completions-clap-complete-for-zsh-bash-fish.md  016-rich-output-colored-styled-cli-output-with-console.md  017-data-lake-commands-engram-lake-add-list-remove-to.md  019-cargo-dist-setup-automated-github-releases.md  (+19 more)
scripts/: patch-homebrew-completions.sh
src/: cli.rs  db.rs  indexing.rs  main.rs  output.rs  storage.rs
templates/: SKILL.md
tests/: helpers.rs  init_test.rs  node_test.rs  rebuild_test.rs  search_test.rs  status_check_test.rs  traverse_test.rs
(+41 files in other folders)
