[package]
name = "engram"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
rusqlite = { version = "0.32", features = ["bundled", "vtab"] }
md5 = "0.7"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
