[package]
name = "engram"
version = "0.1.0"
edition = "2024"
description = "Persistent structured memory for AI agents"
homepage = "https://github.com/cleverlook/engram"
repository = "https://github.com/cleverlook/engram"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
rusqlite = { version = "0.32", features = ["bundled", "vtab"] }
md5 = "0.7"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
dialoguer = "0.11"
clap_complete = "4"
console = "0.15"

[build-dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

[dev-dependencies]
tempfile = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
